; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/mboot/extr_main.c_get_reset_mode.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/mboot/extr_main.c_get_reset_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RESET_MODE_NUM_STATES = common dso_local global i32 0, align 4
@RESET_MODE_TIMEOUT_CYCLES = common dso_local global i32 0, align 4
@RESET_MODE_LED_STATES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_reset_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_reset_mode() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = call i32 (...) @usrbtn_init()
  store i32 1, i32* %1, align 4
  %7 = call i64 (...) @usrbtn_state()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %67

9:                                                ; preds = %0
  %10 = call i32 (...) @systick_init()
  %11 = call i32 (...) @led_init()
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %44, %9
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @RESET_MODE_NUM_STATES, align 4
  %15 = load i32, i32* @RESET_MODE_TIMEOUT_CYCLES, align 4
  %16 = mul nsw i32 %14, %15
  %17 = add nsw i32 %16, 1
  %18 = mul nsw i32 %17, 32
  %19 = icmp slt i32 %13, %18
  br i1 %19, label %20, label %47

20:                                               ; preds = %12
  %21 = load i32, i32* %2, align 4
  %22 = srem i32 %21, 32
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %38

24:                                               ; preds = %20
  %25 = load i32, i32* %1, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %1, align 4
  %27 = load i32, i32* @RESET_MODE_NUM_STATES, align 4
  %28 = icmp sgt i32 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %24
  store i32 1, i32* %1, align 4
  br label %30

30:                                               ; preds = %29, %24
  %31 = load i32, i32* @RESET_MODE_LED_STATES, align 4
  %32 = load i32, i32* %1, align 4
  %33 = sub nsw i32 %32, 1
  %34 = mul nsw i32 %33, 4
  %35 = ashr i32 %31, %34
  store i32 %35, i32* %3, align 4
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @led_state_all(i32 %36)
  br label %38

38:                                               ; preds = %30, %20
  %39 = call i64 (...) @usrbtn_state()
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %38
  br label %47

42:                                               ; preds = %38
  %43 = call i32 @mp_hal_delay_ms(i32 19)
  br label %44

44:                                               ; preds = %42
  %45 = load i32, i32* %2, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %2, align 4
  br label %12

47:                                               ; preds = %41, %12
  store i32 0, i32* %4, align 4
  br label %48

48:                                               ; preds = %62, %47
  %49 = load i32, i32* %4, align 4
  %50 = icmp slt i32 %49, 6
  br i1 %50, label %51, label %65

51:                                               ; preds = %48
  %52 = call i32 @led_state_all(i32 0)
  %53 = call i32 @mp_hal_delay_ms(i32 50)
  %54 = load i32, i32* @RESET_MODE_LED_STATES, align 4
  %55 = load i32, i32* %1, align 4
  %56 = sub nsw i32 %55, 1
  %57 = mul nsw i32 %56, 4
  %58 = ashr i32 %54, %57
  store i32 %58, i32* %5, align 4
  %59 = load i32, i32* %5, align 4
  %60 = call i32 @led_state_all(i32 %59)
  %61 = call i32 @mp_hal_delay_ms(i32 50)
  br label %62

62:                                               ; preds = %51
  %63 = load i32, i32* %4, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %4, align 4
  br label %48

65:                                               ; preds = %48
  %66 = call i32 @mp_hal_delay_ms(i32 300)
  br label %67

67:                                               ; preds = %65, %0
  %68 = load i32, i32* %1, align 4
  ret i32 %68
}

declare dso_local i32 @usrbtn_init(...) #1

declare dso_local i64 @usrbtn_state(...) #1

declare dso_local i32 @systick_init(...) #1

declare dso_local i32 @led_init(...) #1

declare dso_local i32 @led_state_all(i32) #1

declare dso_local i32 @mp_hal_delay_ms(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
